--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
     display: flex;
     justify-content: center;
-    justify-items: center;
+    align-items: center;
     min-height: 100vh;
     font-family: sans-serif;
     padding: 25px;
